--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -5,4 +5,7 @@
         <!-- Customize your theme here. -->
     </style>
 
+  <style name="BootTheme" parent="AppTheme">
+    <item name="android:background">@drawable/bootsplash</item>
+  </style>
 </resources>
