--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,8 +4,9 @@
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
     </style>
+        <style name="BootTheme" parent="Theme.SplashScreen">
+        <item name="android:windowBackground">@drawable/bootsplash_logo</item>
+        <item name="postSplashScreenTheme">@style/AppTheme</item>
+    </style>
 
-  <style name="BootTheme" parent="AppTheme">
-    <item name="android:background">@drawable/bootsplash</item>
-  </style>
 </resources>
