--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -2,11 +2,14 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <item name="android:forceDarkAllowed">false</item>
+    <item name="android:navigationBarColor">#000000</item>  
         <!-- Customize your theme here. -->
     </style>
         <style name="BootTheme" parent="Theme.SplashScreen">
         <item name="android:windowBackground">@drawable/bootsplash_logo</item>
         <item name="postSplashScreenTheme">@style/AppTheme</item>
+        <item name="android:navigationBarColor">#000000</item>  
     </style>
 
 </resources>
